aligning items with fixed widths and flexbox

--- a/epl-today/src/score_grid.css
+++ b/epl-today/src/score_grid.css
@@ -1,7 +1,7 @@
 .home-away-team{
     max-height: 75px;
     flex-shrink: 0;
-    flex-basis: 150px;
+    flex-basis: 180px;
 }
 
 #score_table{
@@ -11,5 +11,7 @@
 .score_logo{
     width: 40px;
     height: 40px;
-    justify-content: center;
+    margin-left: 'auto';
+    margin-right: 'auto';
+    display: block;
 }
